$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-05-15 [B] Fixed CAPTCHA not enabled according to config {SaWey}
2009-05-15 [B] Fixed users not able to edit pics and wrong albums being shown in editpics {SaWey}
2009-05-12 [O] Added admin buttons for album management to album manager and thumbnail view {Paver}
2009-05-12 [A] Added a timestamp to the generated form_token to increase security, now we can also set the lifetime of a token. {SaWey}
2009-05-12 [B] Fixed keyword manager delete to use form token {Paver}
2009-05-11 [B] Fixed admin approval email now sent in admin language for user registrations {SaWey}
2009-05-11 [B] Fixed not able to create new user from admin panel {SaWey}
2009-05-10 [O] Got rid of some undefined index error messages in admin.php {SaWey}
2009-05-08 [D] Added documentation section about watermarking based on Stramm's modpack document {GauGau}
2009-05-08 [B] Fixed @unlink($folder.'cpgvc_tf.txt'); throwing errors {SaWey}
2009-05-08 [O] Replaced autogrow plugin with elastic plugin {GauGau}
2009-05-08 [O] Replaced expand/collapse all toggles on config page with jquery technology {GauGau}
2009-05-08 [O] Added sanitization element for config screen with additional ease of use (spin button) {GauGau}
2009-05-08 [B] Fixed albmgr not showing the first created album when the category was empty {SaWey}
2009-05-07 [M] Removed charsetmgr.php (also from cpg15x.files.xml) {SaWey}
2009-05-07 [B] Removed the include path for Inspekt {SaWey}
2009-05-06 [S] Added form token to all important forms and also added a check on the token where needed {SaWey}